Fix: Center 'done circle' on mileposts
The circle was a little too high -- now
it is vertically aligned. This was only
happening with mileposts.

--- a/web/public/css/app.css
+++ b/web/public/css/app.css
@@ -882,7 +882,7 @@
 }
 
 .deadline .backlog-status .done-status-archive {
-  display: inherit;
+  display: inline-block;
 }
 
 .done .backlog-status .done-status,
